style.css
*{
    margin: 0;
    padding: 0;
    font-family: 'Poppins', sans-serif;
    box-sizing: inherit;
    line-height: 1.5;
}
html{
    scroll-behavior: smooth;
    box-sizing: border-box;
}
body{
    background: #fbfcf8;
    color: #2b2f3a;
    box-sizing: border-box;
    position: absolute;
}
/* .container{
    margin: 5vh 5vw;
} */
/* -----Navigation----- */
nav ul{
    background-color: #fbfcf8;
    text-align: right;
    position: fixed;
    z-index: 2;
    overflow: hidden;
    width: 100%;
}
nav ul li{
    display: inline-block;
    list-style: none;
    margin: 2vh 3vw;
}
nav ul li a{
    color: #2b2f3a;
    text-decoration: none;
    font-size: 16px;
    position: relative;
}
nav ul li a::after{
    content: ' ';
    width: 0;
    height: 3px;
    background: #bc8da0;
    position: absolute;
    left: 0;
    bottom: -0.5vh;
    transition: 0.3s;
}
@media (min-width: 651px){
    nav ul li a:hover::after{
        width: 100%;
    }
}
/* -----Navigation for smaller screen----- */
@media (min-width: 651px){
    .small-menu i{
        display: none !important;
    }
    .s2{
        display: none !important;
    }
}
.small-menu i{
    display: none;
}
.s2{
    display: none;
    position: fixed;
    top: 0;
    right: 0;
    /* 10 is the length of "Playground" */
    width: max(16px*10, 40vw);
    height: 100%;
    padding-top: 5vh;
    text-align: center;
    z-index: 3;
}
.s2 li{
    display: block;
    margin-top: 5vh;
}
.s2 li a:hover::after{
    width: 0;
}
/* -----Header----- */
#header{
    width: 100%;
    height: 100vh;
    background-image: url(Images/Subject.png);
    background-size: max(40vw, 40vh); 
    background-position-x: right;
    background-position-y: bottom;
    background-repeat: no-repeat;
}
.header-text{
    padding-top: 25vh;
    padding-left: 5vw;
    font-size: 16px;
    width: 55vw;
}
.header-text h1{
    font-size: max(min(7vh, 7vw), 30px);
}
.header-text h1 span{
    color:#a04668;
}
/* -----About----- */
#about{
    padding: 10vh 5vw 0vh;
}
.row{
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}
.about-col-1{
    flex-basis: 35%;
    margin-top: auto;
    margin-bottom: auto;
}
.about-col-1 img{
    width: 100%;
    border-radius: 5px;
}
.about-col-2{
    flex-basis: 50%;
    font-size: 16px;
}
.sub-title{
    font-size: 30px;
    color: #a04668;
    margin-bottom: 3vh;
}
.tab-titles{
    display: flex;
    margin-top: 5vh;
}
.tab-links{
    margin-right: 5vw;
    font-weight: 600;
    cursor: pointer;
    position: relative;
    font-size: 14px;
}
.tab-links::after{
    content: ' ';
    width: 0;
    height: 3px;
    background-color: #bc8da0;
    position: absolute;
    left: 0;
    bottom: -0.5vh;
    transition: 0.3s;
}
.tab-links.active-link{
    color:#a04668;
}
.tab-links.active-link::after{
    width: 50%;
}
.tab-contents ul li{
    margin-top: 2vh;
    list-style-position: inside;
}
.tab-contents ul li span{
    color: #a04668;
    font-weight: 600;
}
.tab-contents{
    display: none;
}
.tab-contents.active-tab{
    display: block;
}
/* -----For Fun----- */
#for-fun{
    padding: 10vh 5vw 0vh;
}
.fun-list{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-gap: min(10vh, 10vw);
    place-items: center;
}
.fun-list div{
    display: inline-block;
    background: rgba(188,141,160, 0.5);
    font-size: 16px;
    border-radius: 5px;
    color: #2b2f3a;
    transition: 0.3s;
    text-align: center;
    max-width: 400px;
    padding: 3vh 3vw;
    width: 100%;
    height: 100%;
}
.fun-list div i{
    font-size: 16px;
}
.fun-list div h2{
    font-size: 16px;
    font-weight: 600;
    margin-bottom: 1vh;
}
.fun-list div a{
    text-decoration: none;
    color: #2b2f3a;
    font-size: 16px;
    margin-top: 1vh;
}
@media (min-width: 651px){
    .fun-list div:hover{
        transform: translateY(-10px);
        background: rgba(188,141,160, 0.6);
    }
    .fun-list div a:hover{
        color: #a04668;
    }
}
/* -----For Tech----- */
#for-tech{
    padding: 10vh 5vw 0vh;
}
.tech-list{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-gap: min(10vh, 10vw);
}
.tech{
    border-radius: 5px;
    position: relative;
    overflow: hidden;
    margin: auto;
    max-width: 350px;
}
#center-image{
    display: flex;
    justify-content: center;
    align-items: center;
}
.tech img{
    width: 100%;
    border-radius: 5px;
    display: flex;
    transition: 0.3s;
}
.layer{
    width: 100%;
    height: 100%;
    background: rgba(251,252,248,0.95);
    border-radius: 5px;
    position: absolute;
    left: 0;
    bottom: 0;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding: 0 3vw;
    text-align: center;
    font-size: 16px;
    transition: 0.3s;
}
.layer h2{
    font-size: 16px;
    font-weight: 600;
    margin-bottom: 1vh;
}
.layer a{
    text-decoration: none;
    color: #2b2f3a;
    margin-top: 1vh;
    font-size: 16px;
    display: inline-block;
}
@media (min-width: 651px){
    .tech:hover img{
        transform: scale(1.1);
    }
    .layer{
        height: 0%;
    }
    .tech:hover .layer{
        height: 100%;
    }
    .layer a:hover{
        color: #a04668;
    }
}
.btn{
    display: block;
    margin: 5vh auto;
    width: fit-content;
    border: 1px solid #a04668;
    padding: 14px 30px;
    border-radius: 5px;
    text-decoration: none;
    color: #2b2f3a;
    font-size: 16px;
    transition: 0.3s;
    background-color: transparent;
}
@media (min-width: 651px){
    .btn:hover{
        background-color: #a04668;
        color: #fbfcf8;
    }
}
/* -----Contact----- */
#contact{
    padding: 10vh 5vw 5vh;
}
.contact-left{
    flex-basis: 35%;
}
.contact-right{
    flex-basis: 60%;
}
.social-icons{
    margin-top: 3vh;
}
.social-icons a{
    text-decoration: none;
    font-size: 30px;
    margin-right: 1vw;
    margin-left: 1vw;
    color: #bc8da0;
    display: inline-block;
    transition: 0.3s;
}
@media (min-width: 651px){
    .social-icons a:hover{
        color:#a04668;
        transform: translateY(-5px);
    }
}
.contact-right form{
    width: 100%;
    text-align: center;
}
form input, form textarea{
    width: 90%;
    border: 1px solid #a04668;
    border-radius: 5px;
    outline: none;
    background: #fbfcf8;
    padding: 1vh 1vw;
    margin: 1vh 0;
    color: #2b2f3a;
    font-size: 16px;
    resize: vertical;
}
form .btn{
    padding: 14px 60px;
    cursor: pointer;
}
/* -----Tech Portfolio----- */
#tech-portfolio{
    padding: 10vh 5vw;
}
#tech-portfolio article{
    display: flex;
    padding: 30px;
    scroll-margin-top: 10vh;
}
#tech-portfolio article div{
    width: 50%;
    margin: auto;
}
#tech-portfolio .media{
    width: 20%;
    margin: auto;
}
.card-title{
    font-size: 16px;
    font-weight: 600;
    text-decoration: none;
    color: #2b2f3a;
    margin-top: 1vh;
}
.card-date{
    font-size: 14px;
    font-weight: 400;
    display: inline-block;
    color: #2b2f3a;
}
.card-content{
    font-size: 16px;
    margin-bottom: 3vh;
}
.card-script-name{
    margin-bottom: 0;
}
.card-subtitle{
    margin-bottom: 0;
    font-weight: 600;
}
.card-abstract{
    margin-top: 3vh;
}
#tech-portfolio article div a{
    text-decoration: none;
    font-size: 16px;
    display: inline-block;
    color: #a04668;
    margin-bottom: 3vh;
    margin-right: 3vh;
}
@media (min-width: 651px){
    #tech-portfolio article div a:hover{
        color: #2b2f3a;
    }
}
/* -----Playground----- */
#playground{
    padding: 10vh 5vw 5vh;
}
.grid{
    column-count: 3;
    text-align: center;
}
.grid-item{
    display: flex;
    flex-direction: column;
    break-inside: avoid;
    padding: 5vh 2.5vw 0vh;
    align-items: center;
} 
.card-img{
    width: 80%;
    border-radius: 5px;
    align-items: center;
}
/* -----Post----- */
.post{
    padding: 10vh 5vw 5vh;
    width: 100vw;
}
.post-title:hover{
    color: #a04668;
}
.post-item{
    scroll-margin-top: 10vh;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.post-img{
    margin: 3vh;
}
/* -----CSS for small screen----- */
@media (max-width: 650px){
    /* -----Header----- */
    .small-menu .fa-bars{
        color: #2b2f3a;
        z-index: 2;
        position: fixed;
        overflow: hidden;
        top: 2vh;
        right: 3vw;
        background-color: #fbfcf8;
        padding: 2vw;
        border-radius: 5px;
        cursor: pointer;
        font-size: 30px;
        display: block;
    }
    .s1{
        display: none;
    }
    .s2{
        display: none;
    }
    .small-menu .fa-xmark{
        display: none;
        position: fixed;
        overflow: hidden;
        padding-top: 2vw;
        top: 2vh; 
        right: max(16px*7, 30vw);
        cursor: pointer;
        color: #2b2f3a;
        font-size: 30px;
        z-index: 4;
    }
    /* -----Other Homepage----- */
    .about-col-2{
        flex-basis: 100%;
    }
    .about-col-1{
        display: none;
    }
    .tech {
        max-width: 300px;
    }
    .contact-left, .contact-right{
        flex-basis: 100%;
    }
    /* -----Tech Portfolio----- */
    #tech-portfolio article{
        flex-direction: column;
    }
    #tech-portfolio article div{
        width: 100%;
    }
    .social-icons{
        text-align: center;
    }
    #tech-portfolio .media{
        width: 70%;
    }
    /* -----Playground----- */
    .grid{
        column-count: 2;
    }
}

